<?xml version="1.0"?>
<package format="2">
  <name>rb_theron_gazebo</name>
  <version>0.0.0</version>
  <description>The rb_theron_gazebo package</description>

  <maintainer email="info@robotnik.com">Robotnik</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/robotnik_move_base</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rcomponent</build_depend>
  <build_depend>robotnik_msgs</build_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rb_theron_control</exec_depend>
  <exec_depend>rb_theron_description</exec_depend>
  <exec_depend>rb_theron_localization</exec_depend>
  <exec_depend>rb_theron_navigation</exec_depend>
  <exec_depend>rb_theron_pad</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>robotnik_base_hw_sim</exec_depend>
  <exec_depend>rcomponent</exec_depend>
  <exec_depend>robotnik_msgs</exec_depend>

</package>
